# amber-v2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  brain.py  client_tools.py  config.py  main.py  openai_client.py  persona.py  pipeline.py  protocol.py  ratelimit.py  responder.py  runtime_context.py  sentence_splitter.py  session.py  stt.py  tts.py  turn_signals.py
app/memory/: __init__.py  context.py  store.py  writer.py
app/tools/: __init__.py  openclaw.py  recall.py  registry.py  reminders.py  search.py  tasks.py  update.py
deploy/: README.md  amber.service  setup.sh  update.sh
scripts/: smoke_client.py
tests/: test_brain_tools.py  test_client_tools.py  test_config.py  test_memory_context.py  test_memory_pipeline.py  test_memory_store.py  test_memory_writer.py  test_pipeline.py  test_protocol.py  test_ratelimit.py  test_runtime_context.py  test_sentence_splitter.py  test_session_manager.py  test_tools_openclaw.py  test_tools_recall.py  test_tools_registry.py  test_tools_reminders.py  test_tools_search.py  test_tools_tasks.py  test_tools_update.py  test_ws.py
