[project]
name = "amber"
version = "0.1.0"
description = "Amber — a cloud-hosted personal AI voice backend. Phase 5: polish & reliability."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "anthropic>=0.49",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # HTTP client for the inline web_search tool and the OpenClaw bridge (Phase 4).
    "httpx>=0.27",
    # IANA tz database for zoneinfo — needed for AMBER_TIMEZONE on systems without a
    # system tz db (e.g. Windows); harmless where one exists.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
